--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     volumes:
     # Site
       - ./web:/usr/share/nginx/html/
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     ports:
       - 8000:80
   app:
@@ -24,6 +25,4 @@ services:
     # Aplicação
       - ./app:/app
     working_dir: /app
-    command: bash ./app.sh
-    ports:
-      - 8080:8080
+    command: ./app.sh
