--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,8 @@
 volumes:
   dados:
+networks:
+  banco:
+  web:
 services:
   db:
     image: postgres:9.6
@@ -9,6 +12,10 @@ services:
       # Scripts
       - ./scripts:/scripts
       - ./scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
+    environment:
+      - POSTGRES_PASSWORD=postgres
+    networks:
+      - banco
   frontend:
     image: nginx:1.25
     environment:
@@ -19,6 +26,10 @@ services:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     ports:
       - 8000:80
+    networks:
+      - web
+    depends_on:
+      - app
   app:
     image: python:3.6
     volumes:
@@ -26,3 +37,8 @@ services:
       - ./app:/app
     working_dir: /app
     command: ./app.sh
+    networks:
+      - web
+      - banco
+    depends_on:
+      - db
