--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,9 @@ services:
     environment:
       - NGINX_PORT=80
     volumes:
-    # Site
+      # Site
       - ./web:/usr/share/nginx/html/
+      # Configuração do proxy reverso
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     ports:
       - 8000:80
@@ -34,10 +35,10 @@ services:
   app:
     image: python:3.6
     volumes:
-    # Aplicação
+      # Aplicação
       - ./app:/app
     working_dir: /app
-    command: ./app.sh
+    command: bash ./app.sh
     networks:
       - web
       - banco
@@ -52,13 +53,13 @@ services:
     networks:
       - fila
   worker:
-    image: python:3.6
+    build: worker
     volumes:
+      # Worker
       - ./worker:/worker
     working_dir: /worker
-    command: ./app.sh
+    command: worker.py
     networks:
       - fila
     depends_on:
-      - app
       - queue
