--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,7 @@ services:
       - db
       - queue
     environment:
-      - DB_NAME=email_sender
+      - DB_NAME=emails_sender # Nome errado do banco de dados para testar o override
   queue:
     image: redis:3.2
     networks:
